--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@ Petroglyph, Muley Point, UT.
 <li>
 <a href="misc.html">Misc</a>  
 <li>
+<a href="econ/index.html">Workshop</a>  
+<li>
 <a href="contact.html">Contact </a> 
 <li style="float:right">
 <A HREF="http://www.cmu.edu">Carnegie Mellon</A>
