--- a/econ/index.html
+++ b/econ/index.html
@@ -1,9 +1,9 @@
 <html>
 <title>
-Computational Economic Modeling
+Computational Social Science Modeling
 </title>
 <h1>
-Computational Economic Modeling
+Computational Social Science Modeling
 </h1>
 <hr>
 <h4> Always under construction--comments welcome. </h4>
@@ -14,7 +14,7 @@ Computational Economic Modeling
 <p>
 <li> Announcements (send me email for new additions)
 <ul>
-<li> <A href="announce18.html">2018 Graduate Workshop in Computational Social Sciences</A>.
+<li> <A href="announce20.html">2020 Graduate Workshop in Computational Social Sciences</A>.
 <li> Our book on <A href="http://www.amazon.com/exec/obidos/ISBN%3D0691127026/experimentswitheA/102-2472804-2150544">
 Complex Adaptive Systems: An Introduction to Computational Models of Social
 Life</A>.
@@ -82,32 +82,11 @@ in this area.
 1995  Graduate Workshop in Computational Economics</a>.  
 </ul>
 
-<p> 
-<li> Other Interesting Links
-<ul>
-<li>
-
-<li> <a href="http://www.brook.edu/dynamics"> Brookings Center on Social and Economic Dynamics</a>, 
-Brookings Institute, Washington, D.C.
-<li> An <a href="http://www.econ.iastate.edu/tesfatsi/ace.htm"> Agent-Based Economics</a>
-maintained by Leigh Tesfatsion at Iowa State.
-<li> <a href="http://comp-econ.org"> The Society for Computational Economics</a>.
-<li> <A href="http://www.santafe.edu"> Santa Fe Institute</a>.
-<li> <a href="http://www.sims.berkeley.edu/resources/infoecon"> Varian's
-Information Economy Server</a>.
-<li> <a href="http://rfe.org">
-Resources for Economists on the Internet </a>.
-</ul>
-
-</ul>
-
-
  
 <p>
 <hr>
 <address>
-<a href ="http://zia.hss.cmu.edu/miller">John H. Miller </a>, miller@zia.hss.cmu.edu.
-<IMG SRC="http://zia.hss.cmu.edu/cgi-bin/counter.xbm">
+<a href ="http://jhmsfi">John H. Miller </a>, miller@santafe.edu.
 <p>
 <hr>
 </address>
