--- a/econ/index.html
+++ b/econ/index.html
@@ -30,8 +30,10 @@ These pages
 include information about readings, projects, etc., and are
 a good place to start if you are interested in pursuing research
 in this area.
+ <li> <A href="cw20.html">
+2020 Graduate Workshop in Computational Social Sciences and Complexity</A> (under construction).
 <li> <A href="cw19.html">
-2019 Graduate Workshop in Computational Social Sciences and Complexity</A> (under construction).
+2019 Graduate Workshop in Computational Social Sciences and Complexity</A>.
 <li> <A href="cw18.html">
 2018 Graduate Workshop in Computational Social Sciences and Complexity</A>.
 <li> <A href="cw17.html">
