--- a/econ/index.html
+++ b/econ/index.html
@@ -15,7 +15,7 @@ Computational Social Science Modeling
 <li> Announcements (send me email for new additions)
 <ul>
 <li> <A href="announce20.html">2020 Graduate Workshop in Computational Social Sciences</A>.
-<li> Our book on <A href="http://www.amazon.com/exec/obidos/ISBN%3D0691127026/experimentswitheA/102-2472804-2150544">
+<li> <A href="http://www.amazon.com/exec/obidos/ISBN%3D0691127026/experimentswitheA/102-2472804-2150544">
 Complex Adaptive Systems: An Introduction to Computational Models of Social
 Life</A>.
 
