--- a/econ/index.html
+++ b/econ/index.html
@@ -88,7 +88,7 @@ in this area.
 <p>
 <hr>
 <address>
-<a href ="http://jhmsfi">John H. Miller </a>, miller@santafe.edu.
+<a href ="http://www.jhmsfi.com/index.html">John H. Miller </a>, miller@santafe.edu.
 <p>
 <hr>
 </address>
