--- a/econ/announce20.html
+++ b/econ/announce20.html
@@ -110,7 +110,7 @@ The application deadline is 11 February, 2020.
 <p>
 More information can be found on this site and <a href="https://santafe.edu/engage/learn/schools/graduate-workshop-computational-social-science-mod"> here</A>.
 Completed applications should be submitted to the
-<a href="http://https://apply-sfi.smapply.org/prog/gwcss/">online application site</a>.
+<a href="https://apply-sfi.smapply.org/prog/gwcss/">online application site</a>.
 <p>
 (While we strongly encourage you to apply online, if necessary 
 you may send a hardcopy
