--- a/eep/index.html
+++ b/eep/index.html
@@ -2,9 +2,32 @@
 
 <title>  Experiments with Economic Principles </title> 
 <hr>
-Here is the <A href="eep.html">Experiments with Economic Principles Web Site</a>
+Here is the <A href="http://econ.ucsb.edu/~tedb/eep/eep.html">Experiments with Economic Principles Web Site</a> (now hosted at Ted's site).
 <hr>
-<cite> Copyright (c) 1996, Theodore Bergstrom and John H. Miller, All Rights Reserved </cite>
+ 
+            <h3><font color="#ffcc33"><font color="#cc6600">New!&nbsp;</font>
+    </font>Electronic version of<i> Experiments with Economic
+                Principles </i>(co-authored by Marcus Giametti,
+              Humberto Llavador, John Miller, and Ted Bergstrom) <br>
+            </h3>
+            <p>Most of the experiments in out text can now be run
+              without paper.&nbsp; Professrors Giametti and Llavador
+              have written slick software that runs on students' cell
+              phones or laptops, which tell them their experimental
+              roles and where they can <br>
+              enter their contracts after agreeing to a sale.&nbsp; They
+              have also adopted the&nbsp; experimental
+              instructions,&nbsp; warm-up exercises, homework, and some
+              discussion for web access.&nbsp; The software records
+              transaction prices and creates&nbsp; spreadsheets showing
+              the&nbsp; results of the experiment.&nbsp;&nbsp;<font
+                size="+1"> Check this out at&nbsp;&nbsp; <font
+                  size="+2"><a href="https://econclassexperiments.com/">at
+                    this website.</a></font></font><br>
+              <font size="+1">All of this is available&nbsp; <b>at no
+                  cost! <br>
+                  <br>
+                </b> </font> </p>
 <address>
 <a href ="http://zia.hss.cmu.edu/miller">John H. Miller </a>, 
 <a href="mailto:miller@zia.hss.cmu.edu"> miller@zia.hss.cmu.edu</a>.
