--- a/teaching.html
+++ b/teaching.html
@@ -145,7 +145,7 @@ learn as much or more using such methods, while enjoying the
 experience far more than usual.
 
 <P>
-Ted Bergstrom and I have a textbook, <A HREF="http:eep/eep.html">
+Ted Bergstrom and I have a textbook, <A HREF="eep/index.html">
 Experiments with Economic Principles, 2nd ed</A> (McGraw Hill), that
 fully embraces the experimental approach to teaching economic principles.
 
