--- a/econ/homework22.html
+++ b/econ/homework22.html
@@ -68,26 +68,32 @@ to complete their homework):
 
 <li>
 <a href="homework20/1/index.html">
-Ketika Garg and Madeleine I. G. Daepp
-(2019 GWS)
+Aiankun "Q" Zhong and Ben Preis
+(2022 GWS)
 </a>.
 
 <li>
 <a href="homework20/2/index.html">
-Aviva Blonder, Trang Escobar, and Vincent Wong
-(2019 GWS)
+Keong Cao and Shaula Olson
+(2022 GWS)
 </a>.
 
 <li>
 <a href="homework20/3/index.html">
-Olivia B. Newton and Niclas Lovsjo
-(2019 GWS)
+Brandon Freiberg and Elaine Yao
+(2022 GWS)
 </a>.
 
 <li>
 <a href="homework20/4/index.html">
-Jordan Ackerman, Sabina Sloman, and Pamela Bilo Thomas
-(2019 GWS)
+Herbert Chang and Likun (Kun) Cao
+(2022 GWS)
+</a>.
+   
+<li>
+<a href="homework20/5/index.html">
+Laura Fursich and Elic Weitzel
+(2022 GWS)
 </a>.
 
 </ul>
