--- a/econ/homework22.html
+++ b/econ/homework22.html
@@ -68,13 +68,13 @@ to complete their homework):
 
 <li>
 <a href="homework20/1/index.html">
-Aiankun "Q" Zhong and Ben Preis
+Qiankun "Q" Zhong and Ben Preis
 (2022 GWS)
 </a>.
 
 <li>
 <a href="homework20/2/index.html">
-Keong Cao and Shaula Olson
+Keong Cao and Shayla Olson
 (2022 GWS)
 </a>.
 
