--- a/econ/homework22.html
+++ b/econ/homework22.html
@@ -74,7 +74,7 @@ Qiankun "Q" Zhong and Ben Preis
 
 <li>
 <a href="homework22/2/index.html">
-Keong Cao and Shayla Olson
+Kesong Cao and Shayla Olson
 (2022 GWS)
 </a>.
 
