--- a/research.html
+++ b/research.html
@@ -338,6 +338,38 @@ There is grandeur in this view of social life.
 Some Recent Projects
 </B>
 </FONT>
+ 
+ <P>
+<A NAME="exmach"></A>
+<FONT FACE="geneva, arial, helvetica, sans-serif" Size=+1>
+<B>
+Ex Machina: Coevolving Machines and the Origins of the Social Universe
+</B>
+</FONT>
+
+<FONT FACE="geneva, arial, helvetica, sans-serif" Size=-1>
+
+<P>
+<A HREF="https://www.sfipress.org/books/ex-machina">
+<IMG SRC="ExMachina.jpg" ALT="Book Cover" ALIGN=right>
+</A>
+ If we could rewind the tape of the Earth’s deep history back to the beginning and start 
+ the world anew—would social behavior arise yet again?
+
+While the study of origins is foundational to many scientific fields, 
+such as physics and biology, it has rarely been pursued in the social sciences. 
+ Yet knowledge of something’s origins often gives us new insights into the present.
+
+ In <A HREF="https://www.sfipress.org/books/ex-machina">Ex Machina</A>, I introduce 
+ a methodology for exploring systems of adaptive, interacting, choice-making agents, 
+ and uses this approach to identify conditions sufficient for the emergence of social behavior. 
+ Using ideas from biology, computation, game theory, and the social sciences, I explore how
+ evolving automata can go from asocial to social behavior, and find that systems of simple 
+ adaptive agents—seemingly locked into an asocial morass—can be rapidly 
+ transformed into a bountiful social world driven only by a series of small evolutionary changes. 
+ Such unexpected revolutions by evolution may provide an important clue to the emergence of social life.
+</FONT>
+
 
 <P>
 <A NAME="cass"></A>
