--- a/research.html
+++ b/research.html
@@ -335,7 +335,7 @@ There is grandeur in this view of social life.
 <A NAME="ongoing"></A>
 <FONT FACE="geneva, arial, helvetica, sans-serif" Size=+2>
 <B>
-Some Recent Projects
+Some Projects
 </B>
 </FONT>
  
@@ -402,49 +402,6 @@ computational modeling in this area.
 
 </FONT>
 
-<P>
-<A NAME="ghost"></A>
-<FONT FACE="geneva, arial, helvetica, sans-serif" Size=+1>
-<B>
-The Ghost in the Machine
-</B>
-</FONT>
-
-<FONT FACE="geneva, arial, helvetica, sans-serif" Size=-1>
-
-<P>
-James Engle-Warnick (McGill) and I are developing sound statistical
-methods for divining the underlying "strategic programs" employed by
-human subjects in experimental games.  The goal here is to have a succinct characterization of
-actual human strategic choice, and then use this knowledge to better understand
-and predict behavior in such situations.
-
-</FONT>
-
-<P>
-<A NAME="neuttech"></A>
-<FONT FACE="geneva, arial, helvetica, sans-serif" Size=+1>
-<B>
-Neutral Technological Networks: The Value of Muddling Through
-</B>
-</FONT>
-
-<FONT FACE="geneva, arial, helvetica, sans-serif" Size=-1>
-
-<P>
-This research applies ideas about
-the impact of neutral networks on evolutionary dynamics in biology to
-the problem of technological innovation.  Theoretically, we find that there
-may be considerable value in firms "muddling through" technological spaces, as
-such muddling allows them to achieve superior outcomes that under more traditional
-models would not have been attainable.  One example of this process is in
-software design, where recent notions of
-"refactoring" implicitly attempt to exploit the value of 
-neutral networks.  
-[<A HREF="papers/neutabst.html">abstract</A>][<A HREF="papers/neut.pdf">pdf</A>]
-
-
-</FONT>
 
 <P>
 <A NAME="ddrug"></A>
