--- a/research.html
+++ b/research.html
@@ -80,17 +80,31 @@ Research |
 
 <A STYLE="text-decoration:none" HREF="#background">Background</A><BR>
 <BR>
-<A STYLE="text-decoration:none" HREF="#ongoing">Some Recent Projects</A><BR>
+<A STYLE="text-decoration:none" HREF="#ongoing">Some Projects</A><BR>
 
 <TABLE>
 <TR>
 <TD WIDTH=5>
 <BR>
 </TD>
+ 
+<TD>
+<FONT FACE="geneva, arial, helvetica, sans-serif" Size=-1>
+<A STYLE="text-decoration:none" HREF="#exmach">
+Ex Machina: Coevolving Machines and the Origins of the Social Universe
+</A>
+</FONT>
+</TD>
+</TR>
+<TR>
+<TD WIDTH=5>
+<BR>
+</TD>
+ 
 <TD>
 <FONT FACE="geneva, arial, helvetica, sans-serif" Size=-1>
 <A STYLE="text-decoration:none" HREF="#cass">
-Complex Adaptive Social Systems: The Book
+Complex Adaptive Social Systems
 </A>
 </FONT>
 </TD>
@@ -99,30 +113,7 @@ Complex Adaptive Social Systems: The Book
 <TD WIDTH=5>
 <BR>
 </TD>
-<TD>
-<FONT FACE="geneva, arial, helvetica, sans-serif" Size=-1>
-<A STYLE="text-decoration:none" HREF="#ghost">
-The Ghost in the Machine
-</A>
-</FONT>
-</TD>
-</TR>
-<TR>
-<TD WIDTH=5>
-<BR>
-</TD>
-<TD>
-<FONT FACE="geneva, arial, helvetica, sans-serif" Size=-1>
-<A STYLE="text-decoration:none" HREF="#neuttech">
-Neutral Networks and Technology
-</A>
-</FONT>
-</TD>
-</TR>
-<TR>
-<TD WIDTH=5>
-<BR>
-</TD>
+ 
 <TD>
 <FONT FACE="geneva, arial, helvetica, sans-serif" Size=-1>
 <A STYLE="text-decoration:none" HREF="#ddrug">
