--- a/research.html
+++ b/research.html
@@ -342,7 +342,7 @@ Ex Machina: Coevolving Machines and the Origins of the Social Universe
 
 <P>
 <A HREF="https://www.sfipress.org/books/ex-machina">
-<IMG SRC="ExMachina.jpg" ALT="Book Cover" ALIGN=right>
+<IMG SRC="ExMachina.jpeg" ALT="Book Cover" ALIGN=right>
 </A>
  If we could rewind the tape of the Earth’s deep history back to the beginning and start 
  the world anew—would social behavior arise yet again?
