--- a/index.html
+++ b/index.html
@@ -160,7 +160,19 @@ Through a remarkable convergence of ideas, technology, and scientific and engine
 <div style="position:relative;">
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
 <p>
-John H. Miller received a B.A. in Economics and B.S. in Finance from the University of Colorado in 1982, a M.A. and Ph.D. in Economics from the University of Michigan in 1988, where he worked with Ted Bergstrom and Hal Varian. In 1988 he joined the Santa Fe Institute as their first post doctoral fellow. He started as an Assistant Professor in the Department of Social and Decision Sciences at Carnegie Mellon University in 1990, becoming an Associate Professor in 1995, and Professor in 2000. He headed the Department of Social and Decision Sciences at Carnegie Mellon from 2002-2014 (and the Information Systems program from 1998-2001).  He has been continually involved with the Santa Fe Institute since 1988, holding numerous appointments, and is currently on the external faculty and chair of the Institute's Science Steering Committee (along with ex officio appointments to its Science Board and Board of Trustees).  His scientific interests surround complex adaptive social systems, behavioral economics, adaptive algorithms, and computational modeling.  He has published articles on these topics in various literatures, including  anthropology, complex systems, decision science, economics, law, management, medicine, physics, political science, as well as general science journals.  He has written a number of books, including A Crude Look at the Whole (Basic) and Complex Adaptive Social Systems (with Scott Page, Princeton University Press).  He was born and raised in Denver, Colorado, the fourth generation of a family of cattle ranchers.
+John H. Miller received a B.A. in Economics and B.S. in Finance from the University of Colorado in 1982, a M.A. and Ph.D. in Economics 
+  from the University of Michigan in 1988, where he worked with Ted Bergstrom and Hal Varian. In 1988 he joined the Santa 
+  Fe Institute as their first post doctoral fellow. He started as an Assistant Professor in the Department of Social and Decision 
+  Sciences at Carnegie Mellon University in 1990, becoming an Associate Professor in 1995, and Professor in 2000. He headed the
+  Department of Social and Decision Sciences at Carnegie Mellon from 2002-2014 (and the Information Systems program from 1998-2001).  
+  He has been continually involved with the Santa Fe Institute since 1988, holding numerous appointments, and is currently on the 
+  external faculty and chair of the Institute's Science Steering Committee (along with ex officio appointments to 
+  its Science Board and Board of Trustees).  His scientific interests surround complex adaptive social systems, 
+  behavioral economics, adaptive algorithms, and computational modeling.  He has published articles on these topics in various 
+  literatures, including  anthropology, complex systems, decision science, economics, law, management, medicine, physics, political 
+  science, as well as general science journals.  He has written a number of books, including Ex Machina: Coevolving Machines and the 
+  Origins of the Social Universe (SFI Press), A Crude Look at the Whole (Basic),
+  and Complex Adaptive Social Systems (with Scott Page, Princeton University Press).  He was born and raised in Denver, Colorado, the fourth generation of a family of cattle ranchers.
 </p>
 </div>
 </div>
@@ -178,11 +190,11 @@ John H. Miller received a B.A. in Economics and B.S. in Finance from the Univers
 <p>
 Is social life inevitable?
 <p>
-Suppose we engage in Gould's experiment of "replaying life's tape" and rewind the tape of Earth's deep history back to the start, and rerun the world anew.  Will social behavior arise yet again?  Will it be similar to what we have now?  Or, suppose we happen upon alien life.  Will it be social?  If so, in what way?
+Suppose we engage in Gould's experiment of "replaying life's tape" and rewind the tape of Earth's deep history back to the 
+  start, and rerun the world anew.  Will social behavior arise yet again?  Will it be similar to what we have now?  
+  Or, suppose we happen upon alien life.  Will it be social?  If so, in what way?  Such questions are explored in 
 <p>
-I'm currently exploring these questions using a computational scientific apparatus---the social science equivalent of a particle accelerator in physics.  Like a particle accelerator, it is designed to understand the fundamental elements of our world and, in so doing, give us insights into both our origins and our current reality.  Like its physics analog, we can run our accelerator and carefully observe its output, in hopes of identifying those critical collisions that give us insights into the most fundamental elements and processes that could have formed our social world.  This approach, following Ken Boulding's notion that "science
-consists of testable and partially tested fantasies about the real world,"  
-allows us to engage in new, and ultimately insightful, fantasies about our world. 
+
 </p>
 </div>
 </div>
