--- a/index.html
+++ b/index.html
@@ -188,11 +188,22 @@ John H. Miller received a B.A. in Economics and B.S. in Finance from the Univers
 <!--<div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
 -->
 <p>
-Is social life inevitable?
-<p>
-Suppose we engage in Gould's experiment of "replaying life's tape" and rewind the tape of Earth's deep history back to the 
-  start, and rerun the world anew.  Will social behavior arise yet again?  Will it be similar to what we have now?  
-  Or, suppose we happen upon alien life.  Will it be social?  If so, in what way?  Such questions are explored in 
+ If we could rewind the tape of the Earth’s deep history back to the beginning and start 
+ the world anew—would social behavior arise yet again?
+
+While the study of origins is foundational to many scientific fields, 
+such as physics and biology, it has rarely been pursued in the social sciences. 
+ Yet knowledge of something’s origins often gives us new insights into the present.
+
+ In <A HREF="https://www.sfipress.org/books/ex-machina">Ex Machina</A>, I introduce 
+ a methodology for exploring systems of adaptive, interacting, choice-making agents, 
+ and uses this approach to identify conditions sufficient for the emergence of social behavior. 
+ Using ideas from biology, computation, game theory, and the social sciences, I explore how
+ evolving automata can go from asocial to social behavior, and find that systems of simple 
+ adaptive agents—seemingly locked into an asocial morass—can be rapidly 
+ transformed into a bountiful social world driven only by a series of small evolutionary changes. 
+ Such unexpected revolutions by evolution may provide an important clue to the emergence of social life.
+
 <p>
 
 </p>
