--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ John H. Miller received a B.A. in Economics and B.S. in Finance from the Univers
 -->
 <p>
  If we could rewind the tape of the Earth’s deep history back to the beginning and start 
- the world anew—would social behavior arise yet again?
+ the world anew, would social behavior arise yet again?
 
 While the study of origins is foundational to many scientific fields, 
 such as physics and biology, it has rarely been pursued in the social sciences. 
