--- a/research.html
+++ b/research.html
@@ -345,7 +345,7 @@ Ex Machina: Coevolving Machines and the Origins of the Social Universe
 <IMG SRC="ExMachina.jpeg" ALT="Book Cover" ALIGN=right>
 </A>
  If we could rewind the tape of the Earth’s deep history back to the beginning and start 
- the world anew—would social behavior arise yet again?
+ the world anew, would social behavior arise yet again?
 
 While the study of origins is foundational to many scientific fields, 
 such as physics and biology, it has rarely been pursued in the social sciences. 
