--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@ John H. Miller received a B.A. in Economics and B.S. in Finance from the Univers
   literatures, including  anthropology, complex systems, decision science, economics, law, management, medicine, physics, political 
   science, as well as general science journals.  He has written a number of books, including Ex Machina: Coevolving Machines and the 
   Origins of the Social Universe (SFI Press), A Crude Look at the Whole (Basic),
-  and Complex Adaptive Social Systems (with Scott Page, Princeton University Press).  He was born and raised in Denver, Colorado, the fourth generation of a family of cattle ranchers.
+  and Complex Adaptive Social Systems (with Scott Page, Princeton University Press).  He was born and raised in 
+  Denver, Colorado, the fourth generation of a family of cattle ranchers.
 </p>
 </div>
 </div>
@@ -203,7 +204,7 @@ such as physics and biology, it has rarely been pursued in the social sciences.
  adaptive agents—seemingly locked into an asocial morass—can be rapidly 
  transformed into a bountiful social world driven only by a series of small evolutionary changes. 
  Such unexpected revolutions by evolution may provide an important clue to the emergence of social life.
-
+<A HREF="http://www.cmu.edu">Carnegie Mellon</A>
 <p>
 
 </p>
