--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ While the study of origins is foundational to many scientific fields,
 such as physics and biology, it has rarely been pursued in the social sciences. 
  Yet knowledge of something’s origins often gives us new insights into the present.
 <p>
- In <A HREF="https://www.sfipress.org/books/ex-machina">Ex Machina</A>, I introduce 
+ In Ex Machina: Coevolution and the Origins of the Social Universe (SFI Press), I introduce 
  a methodology for exploring systems of adaptive, interacting, choice-making agents, 
  and uses this approach to identify conditions sufficient for the emergence of social behavior. 
  Using ideas from biology, computation, game theory, and the social sciences, I explore how
@@ -204,7 +204,7 @@ such as physics and biology, it has rarely been pursued in the social sciences.
  adaptive agents—seemingly locked into an asocial morass—can be rapidly 
  transformed into a bountiful social world driven only by a series of small evolutionary changes. 
  Such unexpected revolutions by evolution may provide an important clue to the emergence of social life.
-<A HREF="http://www.cmu.edu">Carnegie Mellon</A>
+
 <p>
 
 </p>
