--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+ 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QDWQ46CHLV"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2NSH7DQLL3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-QDWQ46CHLV');
+  gtag('config', 'G-2NSH7DQLL3');
 </script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
