--- a/econ/homework-23.html
+++ b/econ/homework-23.html
@@ -25,8 +25,8 @@ Past homework problems: <a href="homework95.html">Standing ovation (1995-97)</a>
 <a href="homework16.html">New McDonald (2016)</a>,
 <a href="homework17.html">Trust me (2017)</a>,
 <a href="homework18.html">It's in the ether (2018)</a>,
-<a href="homework19.html">It's in the ether (2019)</a>, and
-<a href="homework22.html">It's in the ether (2022)</a>.
+<a href="homework19.html">Fake news (2019)</a>, and
+<a href="homework22.html">Pick me (2022)</a>.
 
 
 <hr>
