--- a/econ/homework22.html
+++ b/econ/homework22.html
@@ -25,7 +25,7 @@ Past homework problems: <a href="homework95.html">Standing ovation (1995-97)</a>
 <a href="homework16.html">New McDonald (2016)</a>,
 <a href="homework17.html">Trust me (2017)</a>,
 <a href="homework18.html">It's in the ether (2018)</a>, and
-<a href="homework19.html">It's in the ether (2019)</a>.
+<a href="homework19.html">Fake news (2019)</a>.
 
 
 <hr>
