--- a/econ/homework23.html
+++ b/econ/homework23.html
@@ -69,31 +69,31 @@ to complete their homework):
 
 <li>
 <a href="homework23/1/index.html">
-Qiankun "Q" Zhong and Ben Preis
+Becky Neufeld and Chris Zosh
 (2023 GWS)
 </a>.
 
 <li>
 <a href="homework23/2/index.html">
-Kesong Cao and Shayla Olson
+Max Noichl and Emma Templeton
 (2023 GWS)
 </a>.
 
 <li>
 <a href="homework23/3/index.html">
-Brandon Freiberg and Elaine Yao
+Nathan Boyd and Ana Macanovic
 (2023 GWS)
 </a>.
 
 <li>
 <a href="homework23/4/index.html">
-Herbert Chang and Likun (Kun) Cao
+Michael C. McCall and Danica Wilbanks
 (2023 GWS)
 </a>.
    
 <li>
 <a href="homework23/5/index.html">
-Laura Fursich and Elic Weitzel
+Erkinai Derkenbaeva and Robbie Ward
 (2023 GWS)
 </a>.
 
