Update and rename homework.html to homework24.html

--- a/econ/homework24.html
+++ b/econ/homework24.html
@@ -69,10 +69,33 @@ to complete their homework):
 
 <li>
 <a href="homework24/1/index.html">
-XXX and YYY
+Caitlyn Lee and Brendan Wallace
 (2024 GWS)
 </a>.
 
+<li>
+<a href="homework24/2/index.html">
+Lucas Gautheron and Amelia Li
+(2024 GWS)
+</a>.
+
+<li>
+<a href="homework24/3/index.html">
+Palok (Paul) Biswas and Xiaojie Niu
+(2024 GWS)
+</a>.
+
+<li>
+<a href="homework24/4/index.html">
+Uilia Kazmina and Abhishek Dedhe
+(2024 GWS)
+</a>.
+
+<li>
+<a href="homework24/5/index.html">
+Gülşah Akçakır and Benjamin Freixas Emery
+(2024 GWS)
+</a>.
 
 </ul>
 
