--- a/econ/homework24.html
+++ b/econ/homework24.html
@@ -87,7 +87,7 @@ Palok (Paul) Biswas and Xiaojie Niu
 
 <li>
 <a href="homework24/4/index.html">
-Uilia Kazmina and Abhishek Dedhe
+Yuliia Kazmina and Abhishek Dedhe
 (2024 GWS)
 </a>.
 
