--- a/SDS/SDSdissolve.html
+++ b/SDS/SDSdissolve.html
@@ -45,8 +45,8 @@
 
     <div class="container">
         <div class="image-container">
-            <img src="SDS10.jpg" alt="SDS 2010">
-            <img src="SDS24.jpg" alt="SDS 2024" class="top-image">
+            <img src="SDS10.jpg" alt="SDS 2010" class="top image">
+            <img src="SDS24.jpg" alt="SDS 2024">
         </div>
         <input type="range" min="0" max="100" value="0" id="slider">
     </div>
