Update SDSdissolve.html revert to earlier version that worked better

--- a/SDS/SDSdissolve.html
+++ b/SDS/SDSdissolve.html
@@ -45,8 +45,8 @@
 
     <div class="container">
         <div class="image-container">
-            <img src="SDS24.jpg" alt="SDS 2024">
-            <img src="SDS10.jpg" alt="SDS 2010" class="top image">
+            <img src="SDS10.jpg" alt="SDS 2010">
+            <img src="SDS24.jpg" alt="SDS 2024" class="top-image">
         </div>
         <input type="range" min="0" max="100" value="100" id="slider">
     </div>
@@ -63,4 +63,3 @@
 
 </body>
 </html>
-
