--- a/SDS/SDSdissolve.html
+++ b/SDS/SDSdissolve.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Dissolve Slider</title>
+    <title>SDS Faculty</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-    <h1>Image Dissolve Slider</h1>
+    <h1>SDS Faculty</h1>
 
     <div class="image-container">
         <img id="photo1" src="SDS10.jpg" alt="Photo 1">
